--- a/C4-1_CMPS340.ipynb
+++ b/C4-1_CMPS340.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center>CHALLENGE 4.1<center>"
+    "# Data Analysis Project on Titanic Dataset <center>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Definitions"
+    "## ."
    ]
   },
   {
